# utils

./: .clang-format  CMakeLists.txt  README.md
cmake/: functions.cmake  utilsConfig.cmake
include/: Singleton.h  SingletonInstance.h
src/: CMakeLists.txt  NonCopyable.h  SingletonInstance.cpp  main.cpp
